fixed bug where example animates on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -485,10 +485,6 @@ body#default section .card:nth-of-type(2) {
 body#default section .card:nth-of-type(3) {
   order: 3;
   margin-left: 0;
-  animation: slide-out-right 0.5s ease;
-  animation-timeline: view();
-  animation-range-start: 0px;
-  animation-range-end: 525px;
 }
 
 @media screen and (min-width: 1220px) {
